lldpd (1.0.4)
  * Changes:
    + Add "configure system max-neighbors XX" command to modify maximum
      of neighbors accepted per port.
    + Implement lldpRemOrgDefInfoTable table for custom TLVs.
  * Fix:
    + Better compliance for statsTLVsUnrecognizedTotal and
      statsAgeoutsTotal counters.

lldpd (1.0.3)
  * Fix:
    + Fix creation of chroot directory.

lldpd (1.0.2)
  * Changes:
    + On Linux, the monitor process will now drop its privileges
      instead of running as root. It will keep CAP_NET_RAW,
      CAP_NET_ADMIN and CAP_DAC_OVERRIDE capabilities.
    + Support for CDP PD PoE (with negotiation). Thanks to Gustav
      Wiklander.
    + Move support for bonded devices on Linux < 2.6.27 into the
      `--enable-oldies` option. This avoids duplicate packets
      starting from Linux 4.19.

lldpd (1.0.1)
  * Fix:
    + Use "mkdir -p" instead of "mkdir" in systemd unit.

lldpd (1.0.0)
  * Changes:
    + Chassis ID can be set to an arbitrary value with "configure system
      chassisid".
    + Port description can be overriden directly with "configure lldp
      portdescription".
    + Command "configure system interface permanent" enables one to
      specify a pattern for interfaces to be kept in memory even when
      they are removed from the system.
  * Fix:
    + Ensure chassis-related changes are propagated immediately.
    + Ensure management address change is correctly detected.

lldpd (0.9.9)
  * Changes:
    + lldpcli can now display local interfaces with LLDP data sent on
      each of them ("show interfaces").
    + As Dot3 PD device, echo back allocated value from PSE device.
  * Fix:
    + Don't remove interfaces when they are released from a bridge.
    + Don't use "expect stop" with Upstart. It's buggy.

lldpd (0.9.8)
  * Changes:
    + "Station" capability is only set if no other bit is set.
    + Use ethtool to get permanent address for bonds and teams. This
      might provide different results than the previous method. Some